# mcp-pdf-reader

./: .gitignore  README.md  pdf_server.py  pyproject.toml
