[project]
name = "mcp-pdf-reader"
version = "0.1.0"
description = "MCP PDF Reader Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "fitz",
    "pymupdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_server.py"]